# Perceptual-Decision-Making-in-the-Basal-Ganglia

./: CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
data/: cortical_processing_SvC_summary.csv  suite5_2_summary.csv  suite5_2_trials.csv  suite5_3_summary.csv  suite5_4_summary.csv  suite5_4_trials.csv
data/cortical dynamics/: suite1_bypass_summary.csv  suite1_bypass_trials.csv  suite1_summary.csv  suite1_trials.csv  suite2_alter_summary.csv  suite2_bypass_alter_summary.csv  suite2_bypass_summary.csv  suite2_bypass_trials.csv  suite2_summary.csv  suite2_trials.csv
data/learning/: suite3_10_summary.csv  suite3_10_trials.csv  suite3_20_summary.csv  suite3_20_trials.csv  suite3_m10_summary.csv  suite3_m10_trials.csv  suite4_10_summary.csv  suite4_10_trials.csv  suite4_20_summary.csv  suite4_20_trials.csv  suite4_m10_summary.csv  suite4_m10_trials.csv
data/model realizations/: suite5_3_trials.csv
model realizations/: suite5.ipynb
notebooks/: preamble.ipynb
notebooks/cortical dynamics/: cortical processing effect.ipynb  suite1.ipynb  suite2.ipynb
notebooks/learning/: pathway bias performance.ipynb  suite3.ipynb  suite4.ipynb
notebooks/model realizations/: suite5.ipynb
scripts/: cortical processing.py  suite5.py
scripts/cortical dynamics/: suite1.py  suite2.py
scripts/learning/: suite3.py  suite4.py
